2008-03-20  Paolo Carlini  <pcarlini@suse.de>

	PR libstdc++/35637
	* include/tr1_impl/type_traits (struct __in_array): Add back.
	(is_function): Use it.
	* testsuite/tr1/4_metaprogramming/is_function/35637.cc: New.

2008-03-19  Benjamin Kosnik  <bkoz@redhat.com>

	PR libstdc++/35256
	* doc/xml/manual/parallel_mode.xml: Correct configuration documentation.
	* doc/html/manual/bk01pt12ch31s04.html: Regenerate.

2008-03-13  Dennis Czeremin  <dennis.czeremin@smiths-heimann.com>

	PR libstdc++/35566
	* include/bits/stl_multimap.h (multimap<>::multimap(_InputIterator,
	_InputIterator)): Forward to _M_insert_equal, not _M_insert_unique.

2008-03-13  Paolo Carlini  <pcarlini@suse.de>

	PR libstdc++/35541
	* include/debug/functions.h (__check_sorted_set_aux): Fix signature.
	* testsuite/25_algorithms/set_difference/35541.cc: New.

2008-03-06  Chris Jefferson  <chris@bubblescope.net>
	    Paolo Carlini  <pcarlini@suse.de>

	PR libstdc++/35480
	* include/tr1/tuple (operator==, operator<): Fix.
	* include/std/tuple (operator==, operator<): Likewise.
	* testsuite/tr1/6_containers/tuple/comparison_operators/35480.cc: New.
	* testsuite/20_util/tuple/comparison_operators/35480.cc: Likewise.

2008-03-05  Release Manager

	* GCC 4.3.0 released.

2008-03-01  Jakub Jelinek  <jakub@redhat.com>

	* config/abi/post/x86_64-linux-gnu/32/baseline_symbols.txt: Update.
	* config/abi/post/x86_64-linux-gnu/baseline_symbols.txt: Likewise.
	* config/abi/post/powerpc-linux-gnu/baseline_symbols.txt: Likewise.
	* config/abi/post/i386-linux-gnu/baseline_symbols.txt: Likewise.
	* config/abi/post/powerpc64-linux-gnu/32/baseline_symbols.txt:
	Likewise.
	* config/abi/post/powerpc64-linux-gnu/baseline_symbols.txt: Likewise.
	* config/abi/post/i486-linux-gnu/baseline_symbols.txt: Likewise.

2008-02-29  Jakub Jelinek  <jakub@redhat.com>

	* config/abi/pre/gnu.ver: Remove
	_ZNKSt3tr14hashIgEclEg@@GLIBCXX_3.4.10 and
	_ZNKSt4hashIgEclEg@@GLIBCXX_3.4.10 export.
	* config/os/gnu-linux/ldbl-extra.ver: Export