@@ -15,7 +15,7 @@
       2008
     </year>
     <holder>
-      <ulink url="http://fsf.org">FSF
+      <ulink url="http://www.fsf.org/">FSF
       </ulink>
     </holder>
   </copyright>
