@@ -116,7 +116,7 @@ It might work with other compilers, though.</para>
 <para>
   To use the libstdc++ parallel mode, compile your application with
   the compiler flag <constant>-D_GLIBCXX_PARALLEL -fopenmp</constant>. This
-  will link in <code>libgomp</code>, the GNU OpenMP <ulink url="http://gcc.gnu.org/onlinedocs/libgomp">implementation</ulink>,
+  will link in <code>libgomp</code>, the GNU OpenMP <ulink url="http://gcc.gnu.org/onlinedocs/libgomp/">implementation</ulink>,
   whose presence is mandatory. In addition, hardware capable of atomic
   operations is mandatory. Actually activating these atomic
   operations may require explicit compiler flags on some targets
