@@ -1,3 +1,12 @@
+2008-03-23  Paolo Carlini  <pcarlini@suse.de>
+
+	* doc/xml/faq.xml: Fix various links.
+	* doc/xml/api.xml: Likewise.
+	* doc/xml/manual/parallel_mode.xml: Likewise.
+	* doc/html/faq.html: Regenerate.
+	* doc/html/api.html: Likewise.
+	* doc/html/manual/bk01pt12ch31s03.html: Likewise.
+
 2008-03-20  Paolo Carlini  <pcarlini@suse.de>
 
 	PR libstdc++/35637
